--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://andredavedovicz.github.io/movies-lib-reactjs/",
   "name": "movies-lib",
   "private": true,
   "version": "0.0.0",
